# Vouch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_EXE.bat  CONFIGURE_VOUCH.bat  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  START_DESKTOP.bat  START_WEB.bat  Vouch.spec  alembic.ini  desktop.py  docker-compose.yml  launcher.py  pyproject.toml  requirements-build.in
.codex/: config.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_source_occurrences.py  0003_import_fingerprint.py  0004_nullable_cost_estimates.py  0005_x_activity_events.py  0006_dashboard_chat_messages.py  0007_accounts_voice_and_activity_source.py  0008_local_passwordless_otp.py  __init__.py
app/: __init__.py  cli.py  config.py  container.py  database.py  health.py  main.py  resources.py  semantic_holdout_cli.py
app/domain/: __init__.py  content.py  enums.py  security.py  state_machine.py  x_text.py
app/models/: __init__.py  accounts.py  base.py  content.py  drafts.py  enums.py  observability.py  publication.py  video.py
app/prompts/: critic.txt  finalize.txt  generate.txt  humanizer.txt  humanizer_initial.txt  video_script.txt
app/providers/: __init__.py  base.py  mock_provider.py  responses_provider.py
app/repositories/: __init__.py  content.py
app/schemas/: __init__.py  configuration.py  content.py  release_artifacts.py
app/services/: __init__.py  approval_service.py  artifact_projection.py  artifact_projection_coordinator.py  audit.py  auth.py  benchmark.py  claim_extraction.py  claim_structure.py  configuration.py  content_mode.py  cost_service.py  doctor.py  draft_files.py  draft_service.py  editorial_inspection.py  editorial_quality.py  environment_config.py  factual_inspection.py  final_text_inspection.py  generation_pipeline.py  humanizer.py  humanizer_runtime.py  idea_collector.py  idea_ranker.py  image_generation.py  judge_demo.py  manual_generation.py  post_length.py  publishing_service.py  reference_selection.py  scheduler.py  semantic_adjudication.py  semantic_classifier.py  semantic_composition.py  semantic_extraction.py  semantic_extraction_coordinator.py  semantic_lexicon.py  semantic_provider_validation.py  semantic_reconciliation.py  (+10 more)
app/telegram/: __init__.py  api.py  bot.py  state.py
app/utils/: errors.py  logging.py  proxy.py  request_pacing.py
app/web/: __init__.py  auth.py  dashboard.py
app/x_api/: __init__.py  activity.py  live.py  mock.py  read.py
benchmarks/: report.json  scenarios.json
config/: content_profile.yml  content_sources.yml  cost_estimates.yml  runtime.yml  style_examples.yml
deploy/: vouch.service
docs/analyze-personal-voice/: SKILL.md
docs/personal-humanizer/: MANIFEST.sha256  MIGRATION.md  SKILL.md  THIRD_PARTY_NOTES.md  VALIDATION.md  VERSION.md
docs/schemas/: external-semantic-holdout-v1.schema.json  external-semantic-holdout-v2.schema.json
scripts/: backup_sqlite.py  build_artifact_set.py  build_release.py  capture_demo_frames.cjs  check.py  docker_entrypoint.py  docker_smoke.py  prepare_clean_demo.ps1  record_demo.cjs  run_external_semantic_holdout.py  run_external_semantic_holdout_v2.py  run_external_semantic_holdout_v3.py  run_external_semantic_holdout_v4.py  run_external_semantic_holdout_v5.py  setup_local.ps1  setup_x_mcp.ps1  start_local.ps1  wheel_smoke.py
tests/integration/: test_mock_flow.py  (+23 more)
(+127 files in other folders)
